[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Enemies/TheDude/TheDudeIdle.png" type="Texture" id=1]
[ext_resource path="res://src/Enemies/TheDude/TheDude.gd" type="Script" id=2]
[ext_resource path="res://src/Enemies/EnemyStats.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/CollisionTemplates/HurtBox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21.1595, 64.6744 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 61.2018
height = 82.7621

[node name="TheDude" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -129.412 )
frames = SubResource( 2 )
animation = "Idle"

[node name="TheDude" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="TheDude" index="0"]
position = Vector2( -9.24263, -66.0189 )
shape = SubResource( 3 )

[node name="TheTree" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="TheTree" index="0"]
position = Vector2( 36.5305, -193.655 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]
[connection signal="area_entered" from="TheDude" to="." method="_on_TheDude_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]

[editable path="TheDude"]

[editable path="TheTree"]
